--- a/index.html
+++ b/index.html
@@ -59,4 +59,11 @@
     <div class="poster-wrapper"><img src="posters/poster8.jpg" alt="海報8"></div>
   </div>
 </body>
+  <div style="position: absolute; top: 20px; left: 20px;">
+  <a href="https://11th-exhibition.github.io" style="text-decoration: none;">
+    <button style="padding: 8px 16px; font-size: 14px; border: none; border-radius: 6px; background-color: #444; color: #fff; cursor: pointer;">
+      ← 返回首頁
+    </button>
+  </a>
+</div>
 </html>
