--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div style="position: absolute; top: 20px; left: 20px;">
   <a href="https://11th-exhibition.github.io" style="text-decoration: none;">
     <button style="padding: 8px 16px; font-size: 14px; border: none; border-radius: 6px; background-color: #444; color: #fff; cursor: pointer;">
-      ← 返回首頁
+      ← 返回作品頁
     </button>
   </a>
 </div>
