--- a/index.html
+++ b/index.html
@@ -71,9 +71,16 @@
     <div class="poster-wrapper"><img src="posters/poster8.jpg" alt="海報8"></div>
   </div>
   <div style="position: absolute; top: 20px; left: 20px;">
-  <button onclick="history.back()" style="padding: 8px 16px; font-size: 14px; border: none; border-radius: 6px; background-color: #444; color: #fff; cursor: pointer;">
-    ← 返回
-  </button>
+ <button onclick="closeOrWarn()" class="back-button">✕ 關閉分頁</button>
+
+<script>
+  function closeOrWarn() {
+    const closed = window.close();
+    if (!closed) {
+      alert("若無法自動關閉，請手動關閉分頁。");
+    }
+  }
+</script>
 </div>
 </body>
 </html>
