--- a/counter.html
+++ b/counter.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>網站瀏覽計數器</title>
   <style>
-    body {
+    <body> {
       background: #111;
       color: white;
       display: flex;
